--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap": "4.1.3",
     "bootstrap3": "3.3.5",
     "vue": "^2.5.2"
   },
